--- a/backend/package.json
+++ b/backend/package.json
@@ -11,15 +11,18 @@
     "axios": "^1.8.1",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
-    "express": "^4.18.2",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
     "fs": "^0.0.1-security",
-    "jsonwebtoken": "^9.0.0",
-    "mongoose": "^7.0.3",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^7.8.6",
     "multer": "^1.4.5-lts.1",
     "path": "^0.12.7"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
-  }
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
